# show-me-cuda-code

./: .bazelrc  README.md  WORKSPACE
examples/01_add_matrics/: BUILD  README.md  test1.cc  test2.cu  test3.cc  test4.cu  test6.cu
examples/basic/: BUILD.bazel  kernel.cu.cc
examples/basic_info/: test.cu
examples/cublas/: BUILD.bazel  README.md
examples/cuda_info/: BUILD  README.md  main.cu.cc
examples/hello_cuda/: BUILD.bazel  README.md  main.cu
examples/if_cuda/: BUILD.bazel  kernel.h
examples/thrust/: BUILD.bazel  thrust.cu.cc
