load("@local_config_cuda//cuda:build_defs.bzl", "cuda_library")

# thrust have code marked as __global__ or __kernel__
# so source for thrust should be built with cuda_library first
cuda_library(
    name = "thrust_cu",
    srcs = ["thrust.cu.cc"],
    deps = [
        "@local_config_cuda//cuda:cuda_runtime",
    ],
)

# Run with 'bazel run //examples/thrust:main'
cc_binary(
    name = "main",
    deps = [":thrust_cu"],
)
